--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,15 +6,25 @@
   all: revert;
 }
 
-main {
-  padding-top: 4rem;
+.sub{
   width: 100%;
-  height: 100vh;
+  height: 85vh;
+}
+
+main {
+  padding-top: 4.5rem;
+  /* padding-bottom: 4.5rem; */
+  width: 100%;
+  min-height: 100vh;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
+
+/* .body::-webkit-scrollbar{
+  display: none;
+} */
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
